@@ -16,12 +16,12 @@
 		</dict>
 	</array>
 	<key>fileHierarchyDrawerWidth</key>
-	<integer>261</integer>
+	<integer>249</integer>
 	<key>metaData</key>
 	<dict/>
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{664, 90}, {970, 1070}}</string>
+	<string>{{574, 73}, {928, 1095}}</string>
 </dict>
 </plist>
